--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>TODO</p>
+            <p>She is currently work as management at UNILA, in the sector of budget. There, she is responsible for monitor the budget execution.
+              In adition, she is looking for a new job opportunity so started studying at technological area.  
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
